--- a/config/samples/aloys.tech_v1_app.yaml
+++ b/config/samples/aloys.tech_v1_app.yaml
@@ -10,3 +10,8 @@ metadata:
   name: app-sample
 spec:
   # TODO(user): Add fields here
+  deployment:
+    image: nginx
+    replace: 1
+  service:
+    port: 80
