--- a/internal/template/service_nodePort.yml
+++ b/internal/template/service_nodePort.yml
@@ -6,8 +6,10 @@ metadata:
 spec:
   selector:
     app: {{.ObjectMeta.Name}}
+  type: NodePort
   ports:
     - name: http
       protocol: TCP
       port: {{ .Spec.Service.Port}}
       targetPort: {{ .Spec.Service.Port}}
+      nodePort: {{ .Spec.Service.NodePort}}
