--- a/internal/template/ingress.yml
+++ b/internal/template/ingress.yml
@@ -1,18 +1,18 @@
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
-  name: {{.ObjectMeta.Name}}
+  name: {{.ObjectMeta.Name}}-ingress
   namespace: {{.ObjectMeta.Namespace}}
 spec:
+  ingressClassName: nginx
   rules:
-    - host: {{.ObjectMeta.Name}}.baiding.tech
+    - host: {{ .Spec.Ingress.Host}}
       http:
         paths:
           - path: /
             pathType: Prefix
             backend:
               service:
-                name: {{.ObjectMeta.Name}}
+                name: {{.ObjectMeta.Name}}-svc
                 port:
-                  number: 8080
-  ingressClassName: nginx
+                  number: {{ .Spec.Service.Port}}
