--- a/internal/template/service.yml
+++ b/internal/template/service.yml
@@ -7,7 +7,6 @@ spec:
   selector:
     app: {{.ObjectMeta.Name}}
   ports:
-    - name: http
-      protocol: TCP
+    - protocol: TCP
       port: {{ .Spec.Service.Port}}
       targetPort: {{ .Spec.Service.Port}}
