--- a/config/rbac/role.yaml
+++ b/config/rbac/role.yaml
@@ -71,6 +71,13 @@ rules:
 - apiGroups:
   - ""
   resources:
+  - events
+  verbs:
+  - create
+  - patch
+- apiGroups:
+  - ""
+  resources:
   - services
   verbs:
   - create
